--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <ul>
            <li>
             <a  target="_blank"
-                href="https://app.rocketseat.com.br/discover">Conheça o Discover</a>
+                href="#">Link 1</a>
            </li>
 
            <li>
-            <a href="https://www.youtube.com/watch?v=eVTXPUF4Oz4">Linkin Park</a>
+            <a href="#">Link 2</a>
            </li>
 
            <li>
-            <a href="#">Sem Link</a>
+            <a href="#">Link 3</a>
            </li>
 
            <li>
-            <a href="#">...</a>
+            <a href="#">Link 4</a>
            </li>
         </ul>
 
