add img preview

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
         <ul>
            <li>
-            <a  target="_blank"
-                href="#">Link 1</a>
+            <a href="#">Link 1</a>
            </li>
 
            <li>
